--- a/Index.html
+++ b/Index.html
@@ -13,3 +13,8 @@ com seus ambientes climatizado e possivel escapar das condiçoes adversas do cli
 No entanto os shoppings nao sao apenas espaços comerciais.
 eles tambem desempenham um papel importante na economia local gerando empregos e impulsionando o comercio.
 Muitas marcas recomendadas escolhem os shoppings como localizaçao estrategica para suas lojass atraindo um grande fluxo de consumidores.
+Apesar de tantas vantagens e importante lembrar que os shoppings nao sao as unicas opçoes para fazer compras.
+Pequenos comercios locais e feiras tambem oferecem produtos unicos e uma experiencia mais personalizadas.
+E sempre bom valorizar a diversidade e apoiar o comercio local sempre possivel.
+Em resumo os shoppings sao espaços multifuncionais que oferecem uma ampla gama de opçoes de compra e lazer e entretenimento.
+Com sua estrutura moderna e convivencia eles se tornaram parte essencial da vida urbana proporcionando momentos de diversoes e praticamente para os consumidores.
