--- a/Index.html
+++ b/Index.html
@@ -1,20 +1,19 @@
-os shoppings sao espaços moderno e dinamico,que se tornaram parte integrante da vida urbana
-com sua arquitetura conteporania e estrutura bem planejada
-Eles proporcionam aos consumidores uma experiencia unica de comprar lazer e entretenimento
-Ao adentrar em um shopping somos recebidos por uma infinidade de lojas. Eles oferecem desde roupas e acessorios ate eletronicos e artigos para o lar.
-As opçoes sao vastas e atendem a todos os gostos e necessidades.
-Alem disso os shoppings oferecem serviços como saloes de beleza agencias bancarias cinema praças de alimentaçao
-As praças de alimentaçao sao um verdadeiro paraiso gastronomico dentro dos shoppings.
-Com uma variedade de restaurantes e lanchonetes e possivel saborear desde dos prato de culinaria ate os internacionais ate deliciosos lanches rapidos.
-outro aspecto interessante dos shoppings e a comodidades que oferecem aos consumidores.
-Estacionamentos amplos e seguros facilitam o acesso enquanto a estrutura interna e pensada para proporcionar conforto durante as compras.
-Alem disso os shoppings tambem se tornaram um refugio para os dias chuvosos e quentes.
-com seus ambientes climatizado e possivel escapar das condiçoes adversas do clima enquanto se diverte e faz compras.
-No entanto os shoppings nao sao apenas espaços comerciais.
-eles tambem desempenham um papel importante na economia local gerando empregos e impulsionando o comercio.
-Muitas marcas recomendadas escolhem os shoppings como localizaçao estrategica para suas lojass atraindo um grande fluxo de consumidores.
-Apesar de tantas vantagens e importante lembrar que os shoppings nao sao as unicas opçoes para fazer compras.
-Pequenos comercios locais e feiras tambem oferecem produtos unicos e uma experiencia mais personalizadas.
-E sempre bom valorizar a diversidade e apoiar o comercio local sempre possivel.
-Em resumo os shoppings sao espaços multifuncionais que oferecem uma ampla gama de opçoes de compra e lazer e entretenimento.
-Com sua estrutura moderna e convivencia eles se tornaram parte essencial da vida urbana proporcionando momentos de diversoes e praticamente para os consumidores.
+Modelo de texto com tags
+<!DOCTYPE html>
+<html lang="pt-br">
+ <head>
+    <meta charset="UTF-8">
+    <title>Escritório da Gabi</title>
+</head>
+<body>
+<h1><strong>Escritório da Gabi</h1></strong>
+<!-- h1 = título -->
+<!--strong = negrito -->
+<p>Somos um escritório de advocacia especializado em <em><<strong>direito civil</strong></em>, dedicado a ajudar nossos clientes a resolver questões legais relacionadas a contratos, responsabilidade civil, direitos do consumidor, família e sucessões, entre outros.</p>
+<p>Nossa equipe de advogados experientes está pronta para oferecer suporte jurídico eficiente e estratégico, buscando sempre a melhor solução para nossos clientes.</p>
+<p>Conte conosco para proteger seus direitos e interesses no âmbito do direito civil. </p>
+<p>Entre em contato conosco hoje mesmo para uma consulta inicial.</p>
+<!-- p = parágrafo -->
+<!-- em = itálico -->
+</body>
+</html>
