--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,22 @@
-Modelo de texto com tags
-<!DOCTYPE html>
+salao nail designer
+# s<!DOCTYPE html>
 <html lang="pt-br">
  <head>
     <meta charset="UTF-8">
-    <title>Escritório da Gabi</title>
+    <title>Salão da mah</title>
 </head>
 <body>
-<h1><strong>Escritório da Gabi</h1></strong>
+<h1><strong>salão de sombracelha</h1></strong>
 <!-- h1 = título -->
 <!--strong = negrito -->
-<p>Somos um escritório de advocacia especializado em <em><<strong>direito civil</strong></em>, dedicado a ajudar nossos clientes a resolver questões legais relacionadas a contratos, responsabilidade civil, direitos do consumidor, família e sucessões, entre outros.</p>
-<p>Nossa equipe de advogados experientes está pronta para oferecer suporte jurídico eficiente e estratégico, buscando sempre a melhor solução para nossos clientes.</p>
-<p>Conte conosco para proteger seus direitos e interesses no âmbito do direito civil. </p>
-<p>Entre em contato conosco hoje mesmo para uma consulta inicial.</p>
+<p>Somos uma equipe de nail designer e extensão e cilíos <em><strong>cuidando da sua beleza natural</strong></em>, dedicado a ajudar nossos clientes a resolver seu rosto e sua sombracelha a deixa-la mais 
+ bonita e natural com alongamentos perfeitos com duração de alta qualidade</p>
+ <p>Nossa equipe de nail designer somos experientes e estamos prontos para oferecer o melhor do nosso salão e o estabelecimento super confortavel com direito a café de graça, buscando sempre a melhor solução 
+  para nossos clientes.</p>
+<p>ficaremos muito felizes com sua presença e o desempenho ao vir no nosso shopping e salão de nail designer. </p>
+<p>Entre em contato conosco hoje mesmo para uma transformaçao.</p>
 <!-- p = parágrafo -->
 <!-- em = itálico -->
 </body>
-</html>
+</html>hopping
+
